--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR.js avec Canard 3D</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Test AR.js avec le marqueur Hiro</title>
+    <!-- Charger A-Frame et AR.js -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-</head>
-<body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- Marqueur Hiro -->
-        <a-marker type="pattern" url="assets/pattern-hiro.patt">
-            <!-- Modèle 3D : Canard -->
-            <a-entity
-                gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF-Binary/Duck.glb)"
-                scale="0.5 0.5 0.5"
-                position="0 0.1 0"
-                rotation="0 0 0">
-            </a-entity>
-        </a-marker>
-
-        <!-- Caméra AR -->
-        <a-entity camera></a-entity>
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/aframe-ar.js"></script>
+  </head>
+  <body style="margin: 0; overflow: hidden;">
+    <!-- Scène A-Frame avec AR.js -->
+    <a-scene embedded arjs>
+      <!-- Utiliser le marqueur Hiro -->
+      <a-marker preset="hiro">
+        <!-- Ajouter ton modèle 3D -->
+        <a-entity gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF-Binary/Duck.glb)" scale="2 2 2" position="0 0 0" rotation="0 0 0"></a-entity>
+      </a-marker>
+      <!-- Caméra AR -->
+      <a-entity camera></a-entity>
     </a-scene>
-</body>
+  </body>
 </html>
