--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </head>
   <body style="margin: 0; overflow: hidden;">
     <!-- Scène A-Frame avec AR.js -->
-    <a-scene embedded arjs>
+    <a-scene embedded="true" arjs="sourceType: webcam; debugUIEnabled: false;">
       <!-- Utiliser le marqueur Hiro -->
       <a-marker preset="hiro">
         <!-- Ajouter ton modèle 3D -->
-        <a-entity gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF-Binary/Duck.glb)" scale="2 2 2" position="0 0 0" rotation="0 0 0"></a-entity>
+        <a-entity gltf-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF-Binary/Duck.glb" scale="2 2 2" position="0 0 0" rotation="0 0 0"></a-entity>
       </a-marker>
       <!-- Caméra AR -->
       <a-entity camera></a-entity>
