--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test AR.js avec le marqueur Hiro</title>
-    <!-- Charger A-Frame et AR.js -->
+    <title>AR.js Example</title>
+    <!-- Charger la bibliothèque AR.js -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://jeromeetienne.github.io/AR.js/aframe/aframe-ar.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
-    <!-- Scène A-Frame avec AR.js -->
-    <a-scene embedded="true" arjs="sourceType: webcam; debugUIEnabled: false;">
-      <!-- Utiliser le marqueur Hiro -->
+    <!-- Scène AR avec AR.js -->
+    <a-scene embedded arjs>
+      <!-- Marqueur AR (prédéfini "hiro") -->
       <a-marker preset="hiro">
-        <!-- Ajouter ton modèle 3D -->
-        <a-entity gltf-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF-Binary/Duck.glb" scale="2 2 2" position="0 0 0" rotation="0 0 0"></a-entity>
+        <a-box position="0 0.5 0" material="color: red;"></a-box>
       </a-marker>
-      <!-- Caméra AR -->
+      <!-- Ajouter une caméra -->
       <a-entity camera></a-entity>
     </a-scene>
   </body>
