--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR avec Hiro Marker</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+</head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs>
+        <!-- Déclarer le marqueur Hiro -->
         <a-marker preset="hiro">
+            <!-- Ajouter un objet 3D (ici, un cube rouge) -->
             <a-box position="0 0.5 0" material="color: red;"></a-box>
         </a-marker>
+        <!-- La caméra AR -->
         <a-entity camera></a-entity>
     </a-scene>
 </body>
+</html>
