--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <!-- Déclarer le marqueur Hiro -->
         <a-marker preset="hiro">
             <!-- Ajouter un objet 3D (ici, un cube rouge) -->
-            <a-box position="0 0.5 0" material="color: red;"></a-box>
+            <a-entity gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF-Binary/Duck.glb)" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
         </a-marker>
         <!-- La caméra AR -->
         <a-entity camera></a-entity>
     </a-scene>
 </body>
-</html>
+</html>)
