--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Déclarer le marqueur Hiro -->
         <a-marker preset="hiro">
             <!-- Ajouter un objet 3D (ici, un cube rouge) -->
-            <a-entity gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF-Binary/Duck.glb)" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
+            <a-entity gltf-model="url(https://github.com/Xmanthz/nadomons/raw/refs/heads/main/Duck%20(3).glb)" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
         </a-marker>
         <!-- La caméra AR -->
         <a-entity camera></a-entity>
