--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Déclarer le marqueur Hiro -->
         <a-marker preset="hiro">
             <!-- Ajouter un objet 3D (ici, un cube rouge) -->
-            <a-entity gltf-model="url(https://raw.githubusercontent.com/Xmanthz/nadomons/main/Duck%20(3).glb)" scale="3 3 3" position="0 0 0"></a-entity>
+            <a-entity gltf-model="url(https://raw.githubusercontent.com/Xmanthz/nadomons/main/mouch.glb)" scale="2 2 2" position="0 0 0"></a-entity>
         </a-marker>
         <!-- La caméra AR -->
         <a-entity camera></a-entity>
